--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -10,19 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:text="@string/current_action"
+        <Chronometer
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
+            android:id="@+id/chronometer"
             android:layout_weight="1"
-            android:textSize="25dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:visibility="gone" />
 
         <TextView
             android:text="Název akce"
@@ -31,7 +24,26 @@
             android:id="@+id/actionName"
             android:layout_weight="1"
             android:textSize="30sp"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal"
+            android:background="@android:color/background_dark"
+            android:textColor="?attr/colorButtonNormal"
+            android:elevation="4dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/canvas_layout">
+
+        <com.example.root.myapplication.TimerCanvas
+            android:id="@+id/signature_canvas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#FFFFFF" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -55,22 +67,6 @@
             android:id="@+id/bStop"
             android:layout_weight="1"
             android:onClick="stopClick" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/canvas_layout">
-
-        <com.example.root.myapplication.TimerCanvas
-            android:id="@+id/signature_canvas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="#FFFFFF" />
-
     </LinearLayout>
 
 </LinearLayout>
