--- a/app/src/main/res/layout/action_details.xml
+++ b/app/src/main/res/layout/action_details.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/details_screen_background">
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
-        android:layout_weight="0.5">
+        android:layout_weight="0.5"
+        android:background="@color/details_title">
 
         <TextView
             android:text="@string/action_details"
@@ -18,7 +20,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="@android:color/background_dark" />
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <android.support.v7.widget.CardView
@@ -32,7 +34,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/cards_background">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -47,7 +50,10 @@
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:textSize="24sp"
-                    android:padding="5dp" />
+                    android:padding="5dp"
+                    android:fontFamily="sans-serif"
+                    android:textColorHint="@color/details_title"
+                    android:textColor="@color/details_title" />
 
                 <ImageButton
                     android:layout_width="@android:dimen/app_icon_size"
@@ -56,13 +62,14 @@
                     android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:elevation="4dp"
-                    app:srcCompat="@drawable/edit_image" />
+                    app:srcCompat="@drawable/edit_image"
+                    android:backgroundTint="@color/details_title" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="fill_parent"
-                android:background="#565656"
+                android:background="@color/cards_lines"
                 android:layout_height="1dp" />
 
             <LinearLayout
@@ -113,7 +120,8 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="4dp">
+            android:elevation="4dp"
+            android:background="@color/cards_background">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -128,11 +136,12 @@
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.AppCompat"
                     android:padding="5dp"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textColor="@color/details_title" />
             </LinearLayout>
             <View
                 android:layout_width="fill_parent"
-                android:background="#565656"
+                android:background="@color/cards_lines"
                 android:layout_height="1dp" />
             <LinearLayout
                 android:orientation="horizontal"
@@ -165,7 +174,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/cards_background">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -180,11 +190,12 @@
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.AppCompat"
                     android:padding="5dp"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textColor="@color/details_title" />
             </LinearLayout>
             <View
                 android:layout_width="fill_parent"
-                android:background="#565656"
+                android:background="@color/cards_lines"
                 android:layout_height="1dp" />
             <LinearLayout
                 android:orientation="horizontal"
@@ -217,7 +228,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/cards_background">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -232,7 +244,8 @@
                     android:textAppearance="@style/TextAppearance.AppCompat"
                     android:layout_weight="1"
                     android:padding="5dp"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textColor="@color/details_title" />
 
                 <ImageButton
                     android:layout_width="@android:dimen/app_icon_size"
@@ -241,12 +254,13 @@
                     android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:elevation="4dp"
-                    app:srcCompat="@drawable/edit_image" />
+                    app:srcCompat="@drawable/edit_image"
+                    android:backgroundTint="@color/details_title" />
 
             </LinearLayout>
             <View
                 android:layout_width="fill_parent"
-                android:background="#565656"
+                android:background="@color/cards_lines"
                 android:layout_height="1dp" />
             <LinearLayout
                 android:orientation="horizontal"
