--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/blue_gradient">
 
         <Chronometer
             android:layout_width="wrap_content"
@@ -26,7 +27,7 @@
             android:layout_weight="1"
             android:textSize="30sp"
             android:gravity="center_horizontal"
-            android:background="@android:color/background_dark"
+            android:background="@android:color/transparent"
             android:textColor="?attr/colorButtonNormal"
             android:elevation="4dp"
             android:paddingTop="10dp" />
@@ -40,7 +41,7 @@
         <View
             android:layout_width="fill_parent"
             android:layout_height="3dp"
-            android:background="#0004ff"/>
+            android:background="#0004cc"/>
 
     </LinearLayout>
 
@@ -99,7 +100,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/bPause"
             android:layout_weight="1"
-            android:onClick="pauseClick" />
+            android:onClick="pauseClick"
+            android:background="@drawable/button_border"
+
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp" />
 
         <Button
             android:text="@string/button_stop"
@@ -107,7 +113,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/bStop"
             android:layout_weight="1"
-            android:onClick="stopClick" />
+            android:onClick="stopClick"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_border"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
 </LinearLayout>
