--- a/app/src/main/res/menu/bar.xml
+++ b/app/src/main/res/menu/bar.xml
@@ -14,7 +14,7 @@
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_reserved"
         android:title="Reserved"
-        android:visible="false"
+        android:visible="true"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always"></item>
+        app:showAsAction=""></item>
 </menu>
