--- a/app/src/main/res/drawable/blue_gradient.xml
+++ b/app/src/main/res/drawable/blue_gradient.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#000123"
-        android:endColor="#00024f"
+    <gradient android:startColor="#000000"
+        android:endColor="#001f51"
         android:angle="270" />
 
 </shape>
+
+
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:shape="rectangle">-->
+<!--<gradient android:startColor="#000123"-->
+    <!--android:endColor="#00024f"-->
+    <!--android:angle="270" />-->
+
+<!--</shape>-->
