--- a/app/src/main/res/drawable/blue_gradient_reversed.xml
+++ b/app/src/main/res/drawable/blue_gradient_reversed.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <gradient android:startColor="#000000"
+        android:endColor="#001f51"
+        android:angle="135" />
 
-    <corners android:radius="8dp" />
-    <stroke android:width="2px" android:color="#ff0000" />
 </shape>
