--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,13 +5,26 @@
         <item name="colorPrimary">@android:color/holo_blue_dark</item>
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@android:color/holo_blue_dark</item>
+        <item name="android:popupMenuStyle">@style/PopupMenu</item>
+    </style>
+
+    <style name="PopupMenu" parent="@style/Widget.AppCompat.PopupMenu">
+        <item name="android:colorBackground">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:divider">#123456</item>
+        <item name="android:dividerHeight">1dp</item>
+    </style>
+
+    <style name="PopupMenuListView" parent="android:Widget.ListPopupWindow">
+        <item name="android:divider">#FF0000</item>
+        <item name="android:dividerHeight">2dp</item>
     </style>
 
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <!-- android:textColorPrimary is the color of the title text in the Toolbar  -->
-        <item name="android:textColorPrimary">@android:color/holo_blue_light</item>
+        <!--<item name="android:textColorPrimary">@android:color/holo_blue_light</item>-->
         <!-- actionMenuTextColor is the color of the text of action (menu) items  -->
-        <item name="actionMenuTextColor">@android:color/holo_green_light</item>
+        <!--<item name="actionMenuTextColor">@android:color/holo_green_light</item>-->
         <!-- Tints the input fields like checkboxes and text fields -->
         <item name="colorAccent">#ffffff</item>
         <!-- Applies to views in their normal state. -->
@@ -20,7 +33,7 @@
         <item name="colorControlActivated">#ffffff</item>
         <!-- Applied to framework control highlights (i.e ripples or list selectors) -->
         <item name="colorControlHighlight">#ffffff</item>
-
+        <item name="android:textColorSecondary">#ffffff</item>
         <!-- Enable these below if you want clicking icons to trigger a ripple effect -->
         <!--
         <item name="selectableItemBackground">?android:selectableItemBackground</item>
