Added settings menu

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,6 +5,22 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+
+        android:theme="@style/ToolbarTheme"
+        android:minHeight="?attr/actionBarSize"
+        android:id="@+id/detail_toolbar"
+        android:elevation="4dp"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:titleTextColor="#ffffff"
+        app:subtitleTextColor="#ffffff"
+        android:background="?attr/colorPrimary"
+        />
+
+
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -25,11 +41,26 @@
         android:layout_height="wrap_content"
         android:gravity="center">
 
-        <TextView
-            android:text="Version 1.0"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView3" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:text="@string/versionText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12"
+                android:layout_weight="1"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:text="@string/version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <ImageView
             android:layout_width="match_parent"
@@ -43,7 +74,7 @@
             android:id="@+id/textView10"
             android:textAlignment="center"
             android:text="Copyright@2016 \n Filip Elias \n All rights reserved"
-            android:textSize="10sp" />
+            android:textSize="14sp" />
 
     </LinearLayout>
 
@@ -53,6 +84,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
@@ -74,6 +106,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/report_issue"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#d7d7d7"/>
+        <TextView
+            android:text="@string/changelog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/new_changelog"
             android:textSize="18sp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp" />
