--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -4,6 +4,22 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+
+        android:theme="@style/ToolbarTheme"
+        android:minHeight="?attr/actionBarSize"
+        android:id="@+id/help_toolbar"
+        android:elevation="4dp"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:titleTextColor="#ffffff"
+        app:subtitleTextColor="#ffffff"
+        android:background="?attr/colorPrimary"
+        />
+
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -35,79 +51,20 @@
 
     </LinearLayout>
 
-    <ViewFlipper
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/help_gallery">
+        android:id="@+id/help_pager">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <android.support.v4.view.PagerTitleStrip
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:weightSum="1">
+            android:layout_height="wrap_content"
+            android:layout_gravity="top" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:srcCompat="@drawable/help1_low"
-                android:id="@+id/imageView3"
-                android:layout_weight="0.9" />
+    </android.support.v4.view.ViewPager>
 
-            <TextView
-                android:text="Text for main menu"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:id="@+id/textView11"
-                android:layout_weight="0.1"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="18sp"
-                android:textAlignment="center" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                app:srcCompat="@drawable/help2_low"
-                android:id="@+id/imageView4"
-                android:layout_weight="0.9" />
-            <TextView
-                android:text="Text for timer"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:id="@+id/textView11a"
-                android:layout_weight="0.1"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="18sp"
-                android:textAlignment="center" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:srcCompat="@drawable/help3_low"
-                android:id="@+id/imageView5"
-                android:layout_weight="0.9"
-                />
-            <TextView
-                android:text="Text for details"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:id="@+id/textView11b"
-                android:layout_weight="0.1"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="18sp"
-                android:textAlignment="center" />
-        </LinearLayout>
-    </ViewFlipper>
 </LinearLayout>
