--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -93,6 +94,20 @@
             android:hint="@string/add_some_note"
             android:singleLine="false"
             android:focusable="false"></EditText>
+
+        <ImageButton
+            android:layout_width="40dip"
+            app:srcCompat="@drawable/sa"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:elevation="4dp"
+            android:id="@+id/note_ok_button"
+            android:background="@drawable/button_border"
+            android:tint="@android:color/holo_red_dark"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:visibility="gone" />
+
     </LinearLayout>
 
     <LinearLayout
