--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -102,6 +102,7 @@
             android:adjustViewBounds="true"
             android:elevation="4dp"
             android:id="@+id/note_ok_button"
+            android:onClick="noteOKClick"
             android:background="@drawable/button_border"
             android:tint="@android:color/holo_red_dark"
             android:layout_height="40dp"
