--- a/app/src/main/res/layout/action_details.xml
+++ b/app/src/main/res/layout/action_details.xml
@@ -6,10 +6,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/details_screen_background">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
 
 
     <android.support.v7.widget.Toolbar
@@ -67,18 +73,24 @@
                     android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:elevation="4dp"
-                    app:srcCompat="@android:drawable/ic_menu_rotate"
-                    android:backgroundTint="@color/details_title"></ImageButton>
+                    app:srcCompat="@drawable/new_mes"
+                    android:backgroundTint="@color/details_title"
+                    android:onClick="startNextButtonClick"
+                    android:foregroundTint="@android:color/white"
+                    android:foregroundTintMode="src_over"
+                    android:layout_weight="0.12"></ImageButton>
 
                 <ImageButton
                     android:layout_width="@android:dimen/app_icon_size"
                     android:layout_height="@android:dimen/app_icon_size"
-                    android:id="@+id/detail_edit_button"
+                    android:id="@+id/detail_edit_name_button"
                     android:scaleType="fitCenter"
                     android:adjustViewBounds="true"
                     android:elevation="4dp"
                     app:srcCompat="@drawable/edit_image"
-                    android:backgroundTint="@color/details_title" />
+                    android:backgroundTint="@color/details_title"
+                    android:onClick="editNameButtonClick"
+                    />
 
             </LinearLayout>
 
@@ -116,7 +128,7 @@
                     android:id="@+id/detail_name"
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:textSize="26sp"
+                    android:textSize="26dp"
                     android:gravity="right"
                     android:textColor="@android:color/black" />
             </LinearLayout>
@@ -158,11 +170,13 @@
                 <ImageButton
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    app:srcCompat="@drawable/delete"
+                    app:srcCompat="@drawable/trash"
                     android:id="@+id/delete_mes_button"
                     android:scaleType="fitCenter"
-                    android:adjustViewBounds="true" />
-
+                    android:adjustViewBounds="true"
+                    android:onClick="deleteButtonClick"
+                    android:backgroundTint="@color/details_title"
+                    />
             </LinearLayout>
 
             <View
@@ -192,7 +206,7 @@
                     android:id="@+id/current_measuring"
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:textSize="20sp"
+                    android:textSize="20dp"
                     android:gravity="center"
                     android:textColor="@android:color/black" />
 
@@ -207,10 +221,13 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
     <View
         android:layout_width="fill_parent"
         android:background="@color/cards_lines"
         android:layout_height="1dp" />
+
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
