--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="1000dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_margin="5dp"
         android:elevation="4dp"
-        android:layout_weight="0.9">
+       >
 
         <LinearLayout
             android:orientation="vertical"
@@ -62,11 +62,11 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_margin="5dp"
         android:elevation="4dp"
-        android:layout_weight="0.9">
+        >
 
         <LinearLayout
             android:orientation="vertical"
@@ -117,11 +117,11 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:elevation="4dp"
         app:cardElevation="4dp"
-        android:layout_weight="1.3">
+        >
 
         <LinearLayout
             android:orientation="vertical"
@@ -174,7 +174,8 @@
                     android:id="@+id/detail_note"
                     android:padding="5dp"
                     android:textSize="18sp"
-                    android:focusable="false"></EditText>
+                    android:focusable="false"
+                    android:minLines="3"></EditText>
 
             </LinearLayout>
         </LinearLayout>
